--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -34,3 +34,10 @@ jobs:
         with:
           check-command: ./gradlew runAll
           should-run-codecov: false
+      - uses: actions/setup-python@v4
+        with:
+          python-version-file: '.python-version' # Read python version from a file
+      - name: Install requirements
+        run: python -m pip install -r requirements.txt
+      - name: Produce plots
+        run: python plotter.py plots/helloworld.yml ./build/exports/helloScafi ".*" "result" plots/
