--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -41,3 +41,15 @@ jobs:
         run: python -m pip install -r requirements.txt
       - name: Produce plots
         run: python plotter.py plots/helloworld.yml ./build/exports/helloScafi ".*" "result" plots/
+  ci-success:
+    runs-on: ubuntu-latest
+    needs:
+      - Build
+    if: >-
+      always() && (
+        contains(join(needs.*.result, ','), 'failure')
+        || !contains(join(needs.*.result, ','), 'cancelled')
+      )
+    steps:
+      - name: Verify that there were no failures
+        run: ${{ !contains(join(needs.*.result, ','), 'failure') }}
