--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install requirements
         run: python -m pip install -r requirements.txt
       - name: Produce plots
-        run: python plotter.py plots/helloworld.yml ./build/exports/helloScafi ".*" "result" plots/
+        run: python plotter.py plots/helloScafi.yml ./build/exports/helloScafi ".*" "result" plots/
   ci-success:
     runs-on: ubuntu-latest
     needs:
