--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -60,4 +60,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.0.2
       - name: Markdown autodocs
-      - uses: dineshsonachalam/markdown-autodocs@v1.0.4
+        uses: dineshsonachalam/markdown-autodocs@v1.0.4
