--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -59,5 +59,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.2
-      - name: Markdown autodocs
-        uses: dineshsonachalam/markdown-autodocs@v1.0.4
+        with:
+          ref: ${{ github.head_ref }}
+      - name: Update readme
+        run: npx embedme README.md
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "docs: autoupdate readme from scripts changes"
