--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -41,19 +41,6 @@ jobs:
         run: python -m pip install -r requirements.txt
       - name: Produce plots
         run: python plotter.py plots/helloScafi.yml ./build/exports/helloScafi ".*" "result" plots/
-  ci-success:
-    runs-on: ubuntu-latest
-    needs:
-      - Build
-    if: >-
-      always() && (
-        contains(join(needs.*.result, ','), 'failure')
-        || !contains(join(needs.*.result, ','), 'cancelled')
-      )
-    steps:
-      - name: Verify that there were no failures
-        run: ${{ !contains(join(needs.*.result, ','), 'failure') }}
-
   UpdateDoc:
     runs-on: ${{ matrix.os }}-latest
     steps:
@@ -66,3 +53,16 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "docs: autoupdate readme from scripts changes"
+  ci-success:
+    runs-on: ubuntu-latest
+    needs:
+      - Build
+      - UpdateDoc
+    if: >-
+      always() && (
+        contains(join(needs.*.result, ','), 'failure')
+        || !contains(join(needs.*.result, ','), 'cancelled')
+      )
+    steps:
+      - name: Verify that there were no failures
+        run: ${{ !contains(join(needs.*.result, ','), 'failure') }}
