--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Produce plots
         run: python plotter.py plots/helloScafi.yml ./build/exports/helloScafi ".*" "result" plots/
   UpdateDoc:
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.2
