--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,11 +40,24 @@ jobs:
       - name: Install requirements
         run: python -m pip install -r requirements.txt
       - name: Produce plots
-        run: python plotter.py plots/helloworld.yml ./build/exports/helloScafi ".*" "result" plots/
+        run: python plotter.py plots/helloScafi.yml ./build/exports/helloScafi ".*" "result" plots/
+  UpdateDoc:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.0.2
+        with:
+          ref: ${{ github.head_ref }}
+      - name: Update readme
+        run: npx embedme README.md
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "docs: autoupdate readme from scripts changes"
   ci-success:
     runs-on: ubuntu-latest
     needs:
       - Build
+      - UpdateDoc
     if: >-
       always() && (
         contains(join(needs.*.result, ','), 'failure')
