--- a/src/main/yaml/helloScafi.yml
+++ b/src/main/yaml/helloScafi.yml
@@ -14,13 +14,13 @@ variables:
     language: scala
 
 _constants:
+  source: &source 100
   retentionTime: &retentionTime 5.0
   gpsTraceFile: &gpsTraceFile "vcmuser.gpx"
   programRate: &programRate 1.0
   exportInterval: &exportInterval 1.0
   totalNodes: &totalNodes 1497
   timeToAlign: &timeToAlign 1365922800
-  source: &source 100
 
 seeds:
   scenario: *random
@@ -42,26 +42,26 @@ _reactions:
         type: Event
         actions:
           - type: RunScafiProgram
-            parameters: [it.unibo.scafi.examples.HelloWorld, *retentionTime] # second argument is retention time
+            parameters: [it.unibo.scafi.examples.HelloScafi, *retentionTime]
       - program: send
   - reproduceGPS: &reproduceGPS
       type: ReproduceGPSTrace
       parameters: [ *gpsTraceFile, true, "AlignToTime", *timeToAlign, false, false ]
-  - pool: &move
+  - move: &move
       - time-distribution: *moveFrequency
         type: Event
         actions:
           - *reproduceGPS
 
-deployments:
-  type: FromGPSTrace
+deployments: ## i.e, how to place nodes
+  type: FromGPSTrace ## place nodes from gps traces
   parameters: [*totalNodes, *gpsTraceFile, true, "AlignToTime", *timeToAlign, false, false]
-  programs:
-    - *move
+  programs: ## the reactions installed in each nodes
     - *program
+    - *move
   contents:
     - molecule: test
-      concentration: *source
+      concentration: *source # anchor to "source" value, check line 17
     - molecule: g
       concentration: Double.PositiveInfinity
 
