ci: allow semantic-relase to open issues

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -57,6 +57,7 @@ jobs:
     permissions:
       contents: write
       packages: write
+      issues: write
     concurrency:
       # Only one release job at a time. Strictly sequential.
       group: release
