--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,95 +1,35 @@
-name: CI
-on:
-  push:
-    tags: '*'
-    branches-ignore:
-      - 'autodelivery**'
-      - 'bump-**'
-      - 'renovate/**'
-    paths-ignore:
-      - 'CHANGELOG.md'
-      - 'LICENSE'
-      - 'README.md'
-      - 'renovate.json'
-  pull_request:
-  workflow_dispatch:
 
+name: CI/CD Process
+on:
+  workflow_call:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  Build:
+  build:
     strategy:
       matrix:
         os: [windows, macos, ubuntu]
     runs-on: ${{ matrix.os }}-latest
+    concurrency:
+      group: build-${{ github.workflow }}-${{ matrix.os }}-${{ github.event.number || github.ref }}
+      cancel-in-progress: true
     steps:
-      # Checkout the repository
       - name: Checkout
         uses: actions/checkout@v4.2.2
       - name: Check the simulations on CI
-        uses: DanySK/build-check-deploy-gradle-action@3.5.12
+        uses: DanySK/build-check-deploy-gradle-action@3.7.12
         with:
-          check-command: ./gradlew runAll || ./gradlew runAll || ./gradlew runAll
+          check-command: ./gradlew runAll
           should-run-codecov: false
-      - uses: actions/setup-python@v5
-        with:
-          python-version-file: '.python-version' # Read python version from a file
-      - name: Install requirements
-        run: python -m pip install -r requirements.txt
-      - name: Produce plots
-        run: python plotter.py plots/helloScafi.yml ./build/exports/helloScafi ".*" "result" plots/
-  UpdateDoc:
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4.2.2
-        with:
-          ref: ${{ github.head_ref }}
-      - name: Update readme
-        run: npx embedme README.md
-      - uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "docs: autoupdate readme from scripts changes"
-  release:
-    permissions:
-      contents: write
-      packages: write
-      issues: write
-    concurrency:
-      # Only one release job at a time. Strictly sequential.
-      group: release
-      cancel-in-progress: false
-    needs:
-      - Build
-      - UpdateDoc
-    runs-on: ubuntu-24.04
-    if: >-
-      !github.event.repository.fork
-      && (
-        github.event_name != 'pull_request'
-        || github.event.pull_request.head.repo.full_name == github.repository
-      )
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4.2.2
-      - name: Install Node
-        uses: actions/setup-node@v4.1.0
-        with:
-          node-version-file: package.json
-      - run: |
-          npm install
-          npx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+          should-validate-wrapper: ${{ runner.os == 'Linux' }}
   success:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     needs:
-      - Build
-      - UpdateDoc
-      - release
+      - build
     if: >-
       always() && (
         contains(join(needs.*.result, ','), 'failure')
